@@ -79,9 +79,11 @@ public class SecurityConfig {
 
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(
-                List.of("https://smarttech-solutions-react.vercel.app")
-        );
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",                        // React dev server
+                "https://smarttech-solutions-react.vercel.app" // Production
+        ));
+
 
         configuration.setAllowedMethods(
                 List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")
@@ -101,4 +103,5 @@ public class SecurityConfig {
         return source;
     }
 }
+
 
